--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     Make sound such as barking or meowing to control the animals
     </h3>
     <div id="img">
-        <button onclick="start()">Start</button>
-<br>
-<label id="animal_detect"></label>
-<br>
-<label id="detect_percentage"></label>
-<br>
 
+        <button class="btn btn-danger" onclick="start()">Start</button>
+
+<br>
     <img src="https://www.google.com/search?q=cat+photo&rlz=1C1CHBF_enIN820IN820&sxsrf=APq-WBtrDywNkSk8CmPNlJpvKTbb4YqfgA:1649485280810&tbm=isch&source=iu&ictx=1&vet=1&fir=LawCLoWxBsGt8M%252CTmUkLtkPkKEi5M%252C_%253B--16yG3LYPKNHM%252CNlpGXv_hAl-MuM%252C_%253BKjbMoczbtyCcbM%252ChV0GI5oSoae5yM%252C_%253BdN-e0-vjR3hHlM%252ChVpvvL-HxQGRYM%252C_%253B9wap5LETXIiyeM%252CvmACvpHeD8wjzM%252C_%253BEs67tGnJFqXXFM%252CS6cybHMOSoZBQM%252C_%253BXXqUVa0Ro4rGtM%252Cb63QzuP5DYtQEM%252C_%253BDfSaG3zDhKFujM%252ChVpvvL-HxQGRYM%252C_%253B0IQHBEkm0AlPrM%252Cbu71TGvGTu6_iM%252C_%253B_tJ9zISYcJ92GM%252CrzUo6RAz-vdsGM%252C_%253BA_TJ5B4BpiRzNM%252CMia68JDKgpGbjM%252C_%253BparAo2EuNHQxUM%252CCnZWxvwFxgFntM%252C_%253BZ2wG6lr-lOKumM%252CrzUo6RAz-vdsGM%252C_%253By673lRcgZiFMOM%252ChErGBiVN7JWKlM%252C_%253Bpt1uVTXWO-zHsM%252CTmUkLtkPkKEi5M%252C_%253BPmLxHN-Hq326hM%252CAMEpDX2JgeTUoM%252C_&usg=AI4_-kRVqCa4CFySfbxbhpGEps2J_8Sgig&sa=X&ved=2ahUKEwjR5-XBq4b3AhW2pVYBHV4iDhEQ9QF6BAgjEAE#imgrc=--16yG3LYPKNHM">
-
+    <br>
+    <label id="animal_detect">animal sound detected-</label>
+    <br>
+    <label id="detect_percentage">Accuracy-</label>
+    <br>
     </div>
     </center>
 </body>
